<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:background="@drawable/gradient_bg"
    android:padding="16dp"
    tools:context=".CreateAccountActivity">

    <ProgressBar
        android:id="@+id/create_acct_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        style="?android:attr/progressBarStyleLarge"/>

    <LinearLayout
        android:id="@+id/acct_login_form"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/username_account"
            android:hint="@string/username_hint"
            android:layout_width="match_parent"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:paddingBottom="16dp"
            android:layout_height="wrap_content"/>

        <AutoCompleteTextView
            android:id="@+id/email_acct"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"
            android:layout_marginTop="16dp"
            android:maxLines="1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/password_acct"
            android:layout_marginTop="16dp"
            android:hint="@string/password_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:maxLines="1"/>


        <Button
            android:id="@+id/create_acct_button"
            android:textColor="@color/getStartedColor"
            android:text="@string/create_text"
            android:textStyle="bold"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>