<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/gradient_bg"
    tools:context=".PostJournalActivity">

    <ImageView
        android:id="@+id/post_imageView"
        android:layout_width="397dp"
        android:layout_height="227dp"
        android:src="@drawable/image_one"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.444"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.037" />

    <TextView
        android:id="@+id/post_username_textView"
        android:layout_width="98dp"
        android:layout_height="25dp"
        android:layout_marginStart="36dp"
        android:text="Monette"
        android:textColor="#FFFFFF"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/postCameraButton" />

    <TextView
        android:id="@+id/post_date_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:textColor="#FFFFFF"
        android:text="Today"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_username_textView" />

    <ImageView
        android:id="@+id/postCameraButton"
        android:layout_width="135dp"
        android:layout_height="109dp"
        android:layout_marginTop="80dp"
        android:layout_marginBottom="92dp"
        app:layout_constraintBottom_toBottomOf="@+id/post_imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/post_imageView"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <EditText
        android:id="@+id/post_title_et"
        android:layout_width="389dp"
        android:layout_height="50dp"
        android:layout_marginTop="12dp"
        android:layout_marginStart="10dp"
        android:padding="15dp"
        android:ems="10"
        android:hint="@string/post_title"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_imageView" />

    <EditText
        android:id="@+id/post_description_et"
        android:layout_width="388dp"

        android:textSize="19sp"
        android:layout_height="118dp"

        android:padding="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginStart="10dp"
        android:ems="10"
        android:hint="@string/thoughts"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.521"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_title_et" />

    <ProgressBar
        android:id="@+id/post_progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_description_et" />

    <Button
        android:id="@+id/post_save_journal_button"
        android:layout_width="397dp"
        android:layout_height="67dp"
        android:background="@android:color/transparent"
        android:text="@string/save_button"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/post_progressBar"
        app:layout_constraintVertical_bias="0.75" />
</androidx.constraintlayout.widget.ConstraintLayout>